[gd_scene load_steps=6 format=3 uid="uid://bqmp43ce5wwdp"]

[ext_resource type="Script" path="res://Inventory/UI/Inventory.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://blcujmmdc66wb" path="res://Inventory/UI/ItemSlot.tscn" id="2_5twr4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rt7is"]
bg_color = Color(0.215686, 0.215686, 0.215686, 1)

[sub_resource type="Animation" id="Animation_bk80h"]
resource_name = "Interaction Info"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CenterContainer2/InteractionInfoLabel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.7, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_egefk"]
_data = {
"Interaction Info": SubResource("Animation_bk80h")
}

[node name="Control" type="CenterContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="MarginContainer"]
layout_mode = 2
color = Color(0.219608, 0.247059, 0.243137, 1)

[node name="FlowContainer" type="GridContainer" parent="MarginContainer"]
layout_mode = 2
columns = 3

[node name="InventoryContainer" type="VBoxContainer" parent="MarginContainer/FlowContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/FlowContainer/InventoryContainer"]
layout_mode = 2
theme_override_constants/margin_top = 20

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/FlowContainer/InventoryContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 13
alignment = 1

[node name="SlotContainer" parent="MarginContainer/FlowContainer/InventoryContainer/MarginContainer/HBoxContainer" instance=ExtResource("2_5twr4")]
layout_mode = 2

[node name="SlotContainer2" parent="MarginContainer/FlowContainer/InventoryContainer/MarginContainer/HBoxContainer" instance=ExtResource("2_5twr4")]
layout_mode = 2

[node name="SlotContainer3" parent="MarginContainer/FlowContainer/InventoryContainer/MarginContainer/HBoxContainer" instance=ExtResource("2_5twr4")]
layout_mode = 2

[node name="SlotContainer4" parent="MarginContainer/FlowContainer/InventoryContainer/MarginContainer/HBoxContainer" instance=ExtResource("2_5twr4")]
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/FlowContainer/InventoryContainer"]
layout_mode = 2
theme_override_constants/margin_top = 20

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/FlowContainer/InventoryContainer/MarginContainer2"]
layout_mode = 2
theme_override_constants/separation = 13
alignment = 1

[node name="SlotContainer" parent="MarginContainer/FlowContainer/InventoryContainer/MarginContainer2/HBoxContainer" instance=ExtResource("2_5twr4")]
layout_mode = 2

[node name="SlotContainer2" parent="MarginContainer/FlowContainer/InventoryContainer/MarginContainer2/HBoxContainer" instance=ExtResource("2_5twr4")]
layout_mode = 2

[node name="SlotContainer3" parent="MarginContainer/FlowContainer/InventoryContainer/MarginContainer2/HBoxContainer" instance=ExtResource("2_5twr4")]
layout_mode = 2

[node name="SlotContainer4" parent="MarginContainer/FlowContainer/InventoryContainer/MarginContainer2/HBoxContainer" instance=ExtResource("2_5twr4")]
layout_mode = 2

[node name="MarginContainer3" type="MarginContainer" parent="MarginContainer/FlowContainer/InventoryContainer"]
layout_mode = 2
theme_override_constants/margin_top = 20

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/FlowContainer/InventoryContainer/MarginContainer3"]
layout_mode = 2
theme_override_constants/separation = 13
alignment = 1

[node name="SlotContainer" parent="MarginContainer/FlowContainer/InventoryContainer/MarginContainer3/HBoxContainer" instance=ExtResource("2_5twr4")]
layout_mode = 2

[node name="SlotContainer2" parent="MarginContainer/FlowContainer/InventoryContainer/MarginContainer3/HBoxContainer" instance=ExtResource("2_5twr4")]
layout_mode = 2

[node name="SlotContainer3" parent="MarginContainer/FlowContainer/InventoryContainer/MarginContainer3/HBoxContainer" instance=ExtResource("2_5twr4")]
layout_mode = 2

[node name="SlotContainer4" parent="MarginContainer/FlowContainer/InventoryContainer/MarginContainer3/HBoxContainer" instance=ExtResource("2_5twr4")]
layout_mode = 2

[node name="MarginContainer4" type="MarginContainer" parent="MarginContainer/FlowContainer/InventoryContainer"]
layout_mode = 2
theme_override_constants/margin_top = 20

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/FlowContainer/InventoryContainer/MarginContainer4"]
layout_mode = 2
theme_override_constants/separation = 13
alignment = 1

[node name="SlotContainer" parent="MarginContainer/FlowContainer/InventoryContainer/MarginContainer4/HBoxContainer" instance=ExtResource("2_5twr4")]
layout_mode = 2

[node name="SlotContainer2" parent="MarginContainer/FlowContainer/InventoryContainer/MarginContainer4/HBoxContainer" instance=ExtResource("2_5twr4")]
layout_mode = 2

[node name="SlotContainer3" parent="MarginContainer/FlowContainer/InventoryContainer/MarginContainer4/HBoxContainer" instance=ExtResource("2_5twr4")]
layout_mode = 2

[node name="SlotContainer4" parent="MarginContainer/FlowContainer/InventoryContainer/MarginContainer4/HBoxContainer" instance=ExtResource("2_5twr4")]
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/FlowContainer"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="MarginContainer/FlowContainer/MarginContainer2"]
layout_mode = 2
color = Color(0.0705882, 0.0705882, 0.0705882, 1)

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/FlowContainer/MarginContainer2/ColorRect"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 23.0
grow_horizontal = 2

[node name="ItemName" type="Label" parent="MarginContainer/FlowContainer/MarginContainer2/ColorRect/MarginContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 23
theme_override_styles/normal = SubResource("StyleBoxFlat_rt7is")
text = "Item Name"
horizontal_alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/FlowContainer/MarginContainer2/ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 85
theme_override_constants/margin_right = 10

[node name="ItemDescription" type="RichTextLabel" parent="MarginContainer/FlowContainer/MarginContainer2/ColorRect/MarginContainer2"]
layout_mode = 2
autowrap_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/FlowContainer"]
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="MarginContainer/FlowContainer/MarginContainer"]
layout_mode = 2
color = Color(0.172549, 0.172549, 0.172549, 0.839216)

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/FlowContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/FlowContainer/MarginContainer/MarginContainer"]
layout_mode = 2

[node name="UseItemButton" type="Button" parent="MarginContainer/FlowContainer/MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 20
text = "Use Item"

[node name="Separator1" type="MarginContainer" parent="MarginContainer/FlowContainer/MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 10
theme_override_constants/margin_bottom = 10

[node name="ColorRect" type="ColorRect" parent="MarginContainer/FlowContainer/MarginContainer/MarginContainer/VBoxContainer/Separator1"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="DropItemContainer" type="FlowContainer" parent="MarginContainer/FlowContainer/MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="DropSpinBox" type="SpinBox" parent="MarginContainer/FlowContainer/MarginContainer/MarginContainer/VBoxContainer/DropItemContainer"]
layout_mode = 2
min_value = 1.0
value = 1.0
editable = false
update_on_text_changed = true

[node name="DropItemButton" type="Button" parent="MarginContainer/FlowContainer/MarginContainer/MarginContainer/VBoxContainer/DropItemContainer"]
layout_mode = 2
disabled = true
text = "Drop Item"

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/FlowContainer/MarginContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 300)
layout_mode = 2
horizontal_scroll_mode = 0
vertical_scroll_mode = 2

[node name="FlowContainer" type="GridContainer" parent="MarginContainer/FlowContainer/MarginContainer/MarginContainer/VBoxContainer/ScrollContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4

[node name="MarginContainer2" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 85

[node name="SelectedItem" type="TextureRect" parent="MarginContainer2"]
visible = false
modulate = Color(1, 1, 1, 0.486275)
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
expand_mode = 1

[node name="CenterContainer2" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_top = 415

[node name="InteractionInfoLabel" type="Label" parent="CenterContainer2"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 31
text = "Interaction Info"

[node name="InteractionAnimPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_egefk")
}
speed_scale = 0.2

[connection signal="pressed" from="MarginContainer/FlowContainer/MarginContainer/MarginContainer/VBoxContainer/UseItemButton" to="." method="_on_use_item_button_pressed"]
[connection signal="pressed" from="MarginContainer/FlowContainer/MarginContainer/MarginContainer/VBoxContainer/DropItemContainer/DropItemButton" to="." method="_on_drop_item_button_pressed"]
